Set min-width of body to 1200px to prevent the layout breaking when the window is resized too small

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     margin: 0;
     background: #393939;
+    min-width : 1200px;
 }
 h3 {
   font-size: 16px;
